src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accepted_Campaign__c</fullName>
        <description>Pride Campaign name</description>
        <label>Accepted Campaign</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Campaigns_Continued__c</fullName>
        <label>Accepted Campaigns Continued</label>
        <picklist>
            <picklistValues>
                <fullName>AKFISH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMBORO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMLANN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANQING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APEPER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCECU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVEDOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BACACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANCHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCNLAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLJOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANTIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARPER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAYOSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGATOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHUUKC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIAAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIDAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIKAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPULMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNGTNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENCRUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETADOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FARCOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUACOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUAMCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAINAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HINUNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUAUTL</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Campaigns__c</fullName>
        <label>Accepted Campaigns</label>
        <picklist>
            <picklistValues>
                <fullName>AJOSBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHFRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHUAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAIMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAJACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAKINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALBAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAYTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIK2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHRTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Potorono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Raden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1- Rawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Seulawah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BORNEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROMNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAYTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEDESA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHIAPA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Cohorts__c</fullName>
        <label>Accepted Cohorts</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <inlineHelpText>Operations advisor (as needed) 
Budget support 
Legal support 
MOU support</inlineHelpText>
        <label>Advisor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alumni_Advisor__c</fullName>
        <label>Alumni Advisor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Budget__c</fullName>
        <label>Annual Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applying_for_Cohort__c</fullName>
        <label>Applying for Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2 - Spring 07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3 - Winter 07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1 - Winter 07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6 - Fall 07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7 - Spring 08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8 - Fall 08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9 - Winter 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1 - Spring &apos;09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2 - Spring &apos;10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phili 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phili 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIO 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applying_for_Cohorts__c</fullName>
        <label>Applying for Cohorts</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applying_for_Program_at__c</fullName>
        <label>Applying for Program at:</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadalajara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aspirational_Goal__c</fullName>
        <inlineHelpText>Aspirational grant amount being sought by Rare</inlineHelpText>
        <label>Aspirational Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BES_VRM__Initial_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Review_Deadline__c</fullName>
        <label>Board Review Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cohorts_Involved_With__c</fullName>
        <label>Cohorts Involved With</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Concept_LOI_Deadline__c</fullName>
        <label>Concept/LOI Deadline</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <picklist>
            <controllingField>Regions__c</controllingField>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Djibouti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eritrea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madagascar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malawi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mauritius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rwanda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seychelles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somalia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Republic of Tanzania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zambia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zimbabwe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic Republic of the Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equatorial Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morocco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namibia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swaziland</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cumulative_Grant__c</fullName>
        <inlineHelpText>Sum of the prospect’s prior giving to Rare</inlineHelpText>
        <label>Cumulative Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Ask__c</fullName>
        <label>Current Year Ask</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Established__c</fullName>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has either this prospect and/or Rare staff requested no solicitations until further notice?</inlineHelpText>
        <label>Do Not Solicit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donor_Reasons_to_Give_Not_to_Give__c</fullName>
        <label>Donor: Reasons to Give/Not to Give</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donor_Strategy__c</fullName>
        <inlineHelpText>Donor cultivation/relationship management strategy for current fiscal year</inlineHelpText>
        <label>Donor Strategy</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Funds_Disbursement_Date__c</fullName>
        <label>Estimated Funds Disbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <inlineHelpText>When do you expect this grant to arrive?</inlineHelpText>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Grant_Amount__c</fullName>
        <formula>Current_Year_Ask__c *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Year Ask x Probability = Expected Amount</inlineHelpText>
        <label>Expected Grant Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Deadline__c</fullName>
        <label>Final Decision Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Proposal_Deadline__c</fullName>
        <label>Final Proposal Deadline</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Grant_Date__c</fullName>
        <inlineHelpText>Date of the prospect&apos;s first grant to Rare</inlineHelpText>
        <label>First Grant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Grant__c</fullName>
        <inlineHelpText>Amount of organization&apos;s first grant to Rare</inlineHelpText>
        <label>First Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Opportunity__c</fullName>
        <inlineHelpText>The board-approved project, program or initiative that the prospect is being asked to fund.</inlineHelpText>
        <label>Gift Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>ARAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs - Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs - Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs - Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARAs - Panama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Adaptation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Indonesia Prototypes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Peru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish Forever - Philippines Prototypes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livelihoods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronesia 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phils-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Agriculture</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Grant_Range__c</fullName>
        <label>Grant Range</label>
        <picklist>
            <picklistValues>
                <fullName>Four figures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five figures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Six figures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seven figures</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>High_Priority_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority Donor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this planned ask be included in the Rare foundations/government FY forecast?</inlineHelpText>
        <label>Include in Forecast?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Largest_Grant_Date__c</fullName>
        <inlineHelpText>Date of the prospect&apos;s largest grant to Rare</inlineHelpText>
        <label>Largest Grant Date</label>
        <type>Date</type>
    </fields>
</CustomObject>